# KiCraft

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
kicad_helper/: __init__.py
kicad_helper/autoplacer/: freerouting_runner.py
kicad_helper/autoplacer/brain/: subcircuit_render_diagnostics.py
kicad_helper/autoplacer/hardware/: adapter.py
kicad_helper/cli/: __init__.py  add_gnd_zone.py  compose_subcircuits.py  export_subcircuit_artifacts.py  inspect_solved_subcircuits.py  inspect_subcircuits.py  score_layout.py  solve_hierarchy.py  solve_subcircuits.py
kicad_helper/gui/: __main__.py
kicraft/: __init__.py  logging_config.py
kicraft/autoplacer/: config.py  freerouting_runner.py
kicraft/autoplacer/brain/: copper_accounting.py  graph.py  group_placer.py  groups.py  leaf_acceptance.py  leaf_geometry.py  leaf_passive_ordering.py  leaf_routing.py  leaf_size_reduction.py  parent_adapter.py  pins.py  placement.py  placement_alignment.py  placement_scorer.py  placement_solver.py  placement_utils.py  subcircuit_artifacts.py  subcircuit_board_export.py  subcircuit_composer.py  subcircuit_extractor.py  subcircuit_instances.py  subcircuit_render_diagnostics.py  subcircuit_solver.py  types.py
kicraft/autoplacer/hardware/: adapter.py
kicraft/cli/: __init__.py  add_group_labels.py  autoexperiment.py  check_trace_widths.py  clean_experiments.py  compose_subcircuits.py  dashboard_app.py  diff_rounds.py  export_subcircuit_artifacts.py  generate_report.py  inspect_parent.py  inspect_solved_subcircuits.py  inspect_subcircuits.py  layout_session.py  list_footprints.py  net_report.py  parse_schematic.py  plot_results.py  plot_scores.py  program.md  render_drc_overlay.py  render_failure_heatmap.py  score_layout.py  solve_hierarchy.py  solve_subcircuits.py  split_schematic.py  watch_status.py
kicraft/gui/: __main__.py  app.py  db.py  experiment_runner.py  presets.py  run_archive.py  state.py
kicraft/gui/components/: node_detail.py  param_sensitivity.py  parent_score_chart.py  pipeline_graph.py  progression_viewer.py
kicraft/gui/migrations/: init_db.py
kicraft/gui/pages/: analysis.py  board.py  monitor.py  setup.py
kicraft/planning/: __init__.py  types.py
kicraft/scoring/: __init__.py  compactness_check.py  connectivity_check.py  drc_check.py  geometry_check.py  placement_check.py  trace_check.py  visual_check.py
opencode-plugin/: README.md  install.sh  package-lock.json  package.json  qa-e2e.ts  tsconfig.json
opencode-plugin/command/: kicraft-new.md
opencode-plugin/schema/: example_plan.json  project_plan.schema.json
opencode-plugin/src/: index.ts
tests/: test_adapter_atomic_save.py  test_autoexperiment_scoring.py  test_blocker_aware_overlap.py  test_cli_help.py  test_compose_unified.py  test_compute_layout_bbox.py  test_config.py  test_copper_accounting.py  test_freerouting_runner.py  test_hierarchy_levels.py  test_implicit_interface_ports.py  test_import.py  test_layer_aware_overlap.py  test_leaf_geometry.py  test_leaf_passive_ordering.py  test_leaf_status_badge.py  test_mutate_config.py  test_pad_physical_extent.py  test_param_ranges.py  test_parent_adapter.py  test_parent_attachment_constraints.py  test_parent_stamp_keepouts.py  test_pins.py  test_placement_alignment.py  test_presets_builtin.py  test_round_to_layout_pcb_override.py  test_run_artifact_cleanup.py  test_sa_refine.py  test_solve_subcircuits_layout_persistence.py  test_sparse_keepouts.py  test_subcircuit_composer.py  test_subcircuit_extractor.py  test_subcircuit_instances.py  test_types.py
