[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kicraft"
version = "0.1.0"
description = "KiCad PCB automation toolkit — placement, routing, scoring, and experiment management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gui = [
    "nicegui>=1.4",
    "sqlalchemy>=2.0",
    "plotly>=5.0",
]
scoring = [
    "Pillow>=10.0",
]
experiment = [
    "matplotlib>=3.7",
    "flask>=3.0",
    "structlog>=23.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
# Core pipeline
solve-subcircuits = "kicraft.cli.solve_subcircuits:main"
compose-subcircuits = "kicraft.cli.compose_subcircuits:main"
solve-hierarchy = "kicraft.cli.solve_hierarchy:main"

# Experiment management
autoexperiment = "kicraft.cli.autoexperiment:main"
clean-experiments = "kicraft.cli.clean_experiments:main"
watch-status = "kicraft.cli.watch_status:main"

# Scoring & rendering
score-layout = "kicraft.cli.score_layout:main"
render-pcb = "kicraft.cli.render_pcb:main"
render-drc-overlay = "kicraft.cli.render_drc_overlay:main"
render-failure-heatmap = "kicraft.cli.render_failure_heatmap:main"

# Analysis
diff-rounds = "kicraft.cli.diff_rounds:main"
generate-report = "kicraft.cli.generate_report:main"
plot-experiments = "kicraft.cli.plot_experiments:main"
plot-scores = "kicraft.cli.plot_scores:main"

# Board manipulation
move-component = "kicraft.cli.move_component:main"
align-components = "kicraft.cli.align_components:main"
arrange-grid = "kicraft.cli.arrange_grid:main"
add-gnd-zone = "kicraft.cli.add_gnd_zone:main"
add-group-labels = "kicraft.cli.add_group_labels:main"
cleanup-routing = "kicraft.cli.cleanup_routing:main"
split-schematic = "kicraft.cli.split_schematic:main"

# Inspection
list-footprints = "kicraft.cli.list_footprints:main"
check-trace-widths = "kicraft.cli.check_trace_widths:main"
run-drc = "kicraft.cli.run_drc:main"
net-report = "kicraft.cli.net_report:main"
inspect-subcircuits = "kicraft.cli.inspect_subcircuits:main"
inspect-solved-subcircuits = "kicraft.cli.inspect_solved_subcircuits:main"

# Session tracking
layout-session = "kicraft.cli.layout_session:main"

# Dashboard
dashboard-app = "kicraft.cli.dashboard_app:main"

[tool.setuptools.packages.find]
include = ["kicraft*"]

[tool.setuptools.package-data]
"kicraft.cli" = ["program.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["E402", "E702", "E741"]
